@@ -15,6 +15,9 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+Fix bug #1673713: event_attack in (sword etc) weapon doesn't work.
+ server/attack.c: fix EVENT_ATTACK weirdness.
+---
 Fix compilation warnings, mostly missing #include.
  common/exp.c holy.c item.c living.c map.c porting.c readable.c recipe.c shstr.c
   treasure.c utils.c: missing #includes.
